# temp

./: .gitignore  README.md  compare_poses.py  fix_splat_colors.py  generate_model_ttt3r.py  generate_poses_ttt3r.py  install.sh  orchestrator.py  synthesize_poses.py  ttt3r_sfm.py  xfeat_sfm.py  xxx.sh
.cursor/: mcp.json
FLARE/: LICENSE.txt  README.md  app.py  eval_nvs.py  requirements.txt  run_pose_pointcloud.py  train.py
FLARE/mast3r/: catmlp_dpt_head.py  losses.py  metrics.py  model.py  model_nvs_2v.py  modules.py  shallow_cnn.py  util_vgg.py  vgg_pose_head.py
FLARE/scripts/: run_eval_nvs.sh  run_eval_nvs_test.sh  run_pose_pointcloud.sh  run_pose_pointcloud_wpose.sh  train.sh
FLARE/visualizer/: ace_util.py  ace_vis_util.py  ace_visualizer.py  ace_zero_util.py  run_vis.py  vis.sh
PanoDreamer/: .gitignore  .gitmodules  README.md  depth_estimation.py  download_inpainting_ckpts.py  ldi_generation.py  multicondiffusion.py  multicondiffusion_panorama.py  pyproject.toml  render_gsplat.py  train_gsplat.py
PanoDreamer/examples/: 29_real_campus_3.txt
PanoDreamer/utils/: depth_layering.py  depth_utilsv2.py  depth_utilsv3.py
TTT3R/: LICENSE
TTT3R/datasets_preprocess/: long_prepare_kitti.py
Wan2.1/: README.md
four_d_gaussian/: README.md  cosmos_inference_template.json  generate_poses_bounds.py  generate_poses_da3.py  install.sh  orchestrator.py  prepare_vace_source.py  synthesize_poses.py  verify_path.py  visualize_poses.py
four_d_gaussian/TTT3R/: .gitignore  README.md  demo.py  viser_utils.py
infinite-simul-realtime-4d-gaussian-vgg/: README.md
(+91 files in other folders)
